--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Jitesh Majety
 logo: /assets/img/MJ-circle.png
-description: Minimal is a theme for GitHub Pages.
+description: I'm Jitesh, a committedly adaptable Software Engineer with 3+ years in Python, JavaScript, and AWS, passionate about delivering quality solutions.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
