--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Jitesh Majety
 logo: /assets/img/MJ-circle.png
-description: I'm Jitesh, an adaptable Software Engineer with 3+ years in Python, JavaScript, and AWS, passionate about delivering quality solutions in software development, data science and data engineering.
+description: I'm Jitesh, an adaptable Software Engineer with 3+ years in Python, JavaScript, and AWS, passionate about delivering quality solutions in software development, machine learning and data engineering.
 google_analytics:
 theme: jekyll-theme-minimal
